# AI-Model-Comparison-Tool

./: .gitignore  README.md  pyproject.toml
ai_model_comparison/: __init__.py  app.py  benchmark_loader.py  config.py  exceptions.py  gemini_client.py  pipeline.py  scaledown_client.py
ai_model_comparison/data/: benchmarks.json
static/: style.css
templates/: index.html  results.html
tests/: test_pipeline.py
